--- a/cw11/cw11.css
+++ b/cw11/cw11.css
@@ -52,7 +52,8 @@ div#stopka{
 table{
     border-collapse: collapse;
     margin: 0;
-    margin-left: 20px;
+    margin-left: 40px;
+    margin-top: 20px;
     text-align: left;
 }
 th{
